--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="./img/vegetables.png" type="image/png">
+    <link rel="icon" href="./img/food.png" type="image/png">
     <title>Media Queries</title>
 </head>
 <body>
@@ -58,10 +58,10 @@
            <img src="./img/veg.png" height="350px" class="celebration" alt="vegetable">
          <div class="content">
             <p>
-                vegetable market is a type of building or structure created and designed in various colors, materials, shapes, sizes, and styles with accurate and specific fruit and vegetables. Vegetable markets provide healthier food items that are fresher than the ones available in supermarkets.
+                Vegetable market is a type of building or structure created and designed in various colors, materials, shapes, sizes, and styles with accurate and specific fruit and vegetables. Vegetable markets provide healthier food items that are fresher than the ones available in supermarkets.
             </p>
            <p class="secondary-conten">
-            vegetable market is a type of building or structure created and designed in various colors, materials, shapes, sizes, and styles with accurate and specific fruit and vegetables. Vegetable markets provide healthier food items that are fresher than the ones available in supermarkets.
+            Vegetable market is a type of building or structure created and designed in various colors, materials, shapes, sizes, and styles with accurate and specific fruit and vegetables. Vegetable markets provide healthier food items that are fresher than the ones available in supermarkets.
             </p>
            
        </div>
