new changes added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="nav">
-        <span class="veg-emoji">Vegetable Store</span>
+        <span class="veg-emoji">Vegetable<br/> Store</span>
        
        <div class="veg">
            <span class="veg-item">
